[gd_scene load_steps=18 format=3 uid="uid://qp1kxjafvog4"]

[ext_resource type="Script" uid="uid://dxlhasv1awol2" path="res://zpause_menu_test/main.gd" id="1_vomdd"]
[ext_resource type="Texture2D" uid="uid://1qdwio2ngx7c" path="res://assets/menus/pause_menu.png" id="2_fm3i3"]
[ext_resource type="Texture2D" uid="uid://cph34irtlkggl" path="res://assets/menus/pause_selection.png" id="3_b8gpk"]
[ext_resource type="Script" uid="uid://gn68ao60t773" path="res://zpause_menu_test/pause.gd" id="3_mb7jy"]
[ext_resource type="Texture2D" uid="uid://dyeeb6d3hu71t" path="res://assets/menus/settings_menu.png" id="4_4ix1u"]
[ext_resource type="Texture2D" uid="uid://d2a6d85q34wgh" path="res://assets/menus/multiplayer.png" id="5_2gfx5"]
[ext_resource type="FontFile" uid="uid://mm4b2boot0jf" path="res://assets/minecraftfont.woff" id="6_6lk1x"]
[ext_resource type="Script" uid="uid://uqkdxi4buein" path="res://zpause_menu_test/settings.gd" id="6_354fr"]
[ext_resource type="Texture2D" uid="uid://d1xxlt0r4kru0" path="res://assets/menus/skin_swapper.png" id="7_voqcp"]
[ext_resource type="Script" uid="uid://ks2ro51v56mb" path="res://zpause_menu_test/multiplayer.gd" id="8_07vwh"]
[ext_resource type="SpriteFrames" uid="uid://db8a62xdu5iop" path="res://assets/player/player_frames.tres" id="9_3uxlc"]
[ext_resource type="Script" uid="uid://bc0prddx8bfsy" path="res://zpause_menu_test/skin_swapper.gd" id="11_vkru8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w5166"]
atlas = ExtResource("3_b8gpk")
region = Rect2(0, 0, 169, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxput"]
atlas = ExtResource("3_b8gpk")
region = Rect2(0, 61, 169, 61)

[sub_resource type="SpriteFrames" id="SpriteFrames_ej780"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5166")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxput")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_camai"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rbu0j"]

[node name="pause_menu" type="Node2D"]
process_mode = 3
process_priority = 100
script = ExtResource("1_vomdd")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1154.0
offset_top = -635.0
offset_right = 2307.0
offset_bottom = 1284.0
color = Color(0, 0, 0, 0.294118)

[node name="menu_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(577, 324)
scale = Vector2(1.28289, 1.28289)
texture = ExtResource("2_fm3i3")
script = ExtResource("3_mb7jy")

[node name="resume" type="TextureButton" parent="menu_sprite"]
offset_left = -79.0
offset_top = -113.805
offset_right = 78.0
offset_bottom = -65.8051

[node name="respawn" type="TextureButton" parent="menu_sprite"]
offset_left = -79.0
offset_top = -58.4615
offset_right = 78.0
offset_bottom = -10.4615

[node name="settings" type="TextureButton" parent="menu_sprite"]
offset_left = -79.0
offset_top = -3.11795
offset_right = 78.0
offset_bottom = 44.882

[node name="quit_to_title" type="TextureButton" parent="menu_sprite"]
offset_left = -79.0
offset_top = 51.4462
offset_right = 78.0
offset_bottom = 99.4462

[node name="quit_game" type="TextureButton" parent="menu_sprite"]
offset_left = -79.0
offset_top = 106.79
offset_right = 78.0
offset_bottom = 154.79

[node name="selection" type="AnimatedSprite2D" parent="menu_sprite"]
position = Vector2(0.5, -89.5)
sprite_frames = SubResource("SpriteFrames_ej780")
autoplay = "default"
frame_progress = 0.991673

[node name="settings_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(577, 324)
scale = Vector2(1.28289, 1.28289)
texture = ExtResource("4_4ix1u")
script = ExtResource("6_354fr")

[node name="controls" type="TextureButton" parent="settings_sprite"]
offset_left = -77.0
offset_top = -164.0
offset_right = 78.0
offset_bottom = -117.0

[node name="sound" type="TextureButton" parent="settings_sprite"]
offset_left = -77.0
offset_top = -109.0
offset_right = 78.0
offset_bottom = -62.0

[node name="multiplayer" type="TextureButton" parent="settings_sprite"]
offset_left = -77.0
offset_top = -54.0
offset_right = 78.0
offset_bottom = -7.0

[node name="skins" type="TextureButton" parent="settings_sprite"]
offset_left = -77.0
offset_top = 0.999985
offset_right = 78.0
offset_bottom = 48.0

[node name="fullscreen" type="TextureButton" parent="settings_sprite"]
offset_left = -77.0
offset_top = 56.0
offset_right = 78.0
offset_bottom = 103.0

[node name="done" type="TextureButton" parent="settings_sprite"]
offset_left = -77.1695
offset_top = 111.467
offset_right = 77.8305
offset_bottom = 158.467

[node name="selection" type="AnimatedSprite2D" parent="settings_sprite"]
position = Vector2(0.779477, -140.308)
sprite_frames = SubResource("SpriteFrames_ej780")
autoplay = "default"
frame_progress = 0.991673

[node name="multiplayer_menu" type="Sprite2D" parent="."]
visible = false
position = Vector2(577, 324)
scale = Vector2(1.283, 1.283)
texture = ExtResource("5_2gfx5")
script = ExtResource("8_07vwh")

[node name="ip" type="LineEdit" parent="multiplayer_menu" groups=["server_IP_input"]]
offset_left = -116.0
offset_top = 17.0
offset_right = 117.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("6_6lk1x")
theme_override_styles/normal = SubResource("StyleBoxEmpty_camai")
placeholder_text = "8080"

[node name="port" type="LineEdit" parent="multiplayer_menu" groups=["server_port_input"]]
offset_left = -116.0
offset_top = -57.0
offset_right = 117.0
offset_bottom = -23.0
theme_override_fonts/font = ExtResource("6_6lk1x")
theme_override_styles/normal = SubResource("StyleBoxEmpty_camai")
placeholder_text = "127.0.0.1"

[node name="host" type="TextureButton" parent="multiplayer_menu"]
offset_left = -123.0
offset_top = 79.0
offset_right = -7.0
offset_bottom = 113.0

[node name="join" type="TextureButton" parent="multiplayer_menu"]
offset_left = 7.0
offset_top = 79.0
offset_right = 123.0
offset_bottom = 113.0

[node name="cancel" type="TextureButton" parent="multiplayer_menu"]
offset_left = -123.0
offset_top = 122.0
offset_right = 124.0
offset_bottom = 156.0

[node name="skin_swapper" type="Sprite2D" parent="."]
position = Vector2(577, 324)
scale = Vector2(1.58822, 1.58822)
texture = ExtResource("7_voqcp")
script = ExtResource("11_vkru8")

[node name="sprite" type="AnimatedSprite2D" parent="skin_swapper"]
position = Vector2(0, 15.7409)
scale = Vector2(6.75, 6.75)
sprite_frames = ExtResource("9_3uxlc")
animation = &"1_walk"
autoplay = "1_walk"
frame_progress = 0.504981

[node name="apply" type="TextureButton" parent="skin_swapper"]
offset_left = -40.0
offset_top = 97.0
offset_right = 39.0
offset_bottom = 125.0
metadata/_edit_use_anchors_ = true

[node name="left" type="TextureButton" parent="skin_swapper"]
offset_left = -102.0
offset_top = -26.0
offset_right = -79.0
offset_bottom = -2.0
metadata/_edit_use_anchors_ = true

[node name="right" type="TextureButton" parent="skin_swapper"]
offset_left = 80.0
offset_top = -26.0
offset_right = 103.0
offset_bottom = -2.0
metadata/_edit_use_anchors_ = true

[node name="skinText" type="Label" parent="skin_swapper"]
offset_left = -61.0
offset_top = -136.0
offset_right = 61.0
offset_bottom = -106.0
theme_override_fonts/font = ExtResource("6_6lk1x")
theme_override_font_sizes/font_size = 24
text = "Skin"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="applyText" type="Label" parent="skin_swapper"]
offset_left = -61.0
offset_top = 99.0
offset_right = 61.0
offset_bottom = 122.0
theme_override_fonts/font = ExtResource("6_6lk1x")
theme_override_font_sizes/font_size = 16
text = "Apply"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="username" type="LineEdit" parent="skin_swapper" groups=["username_input"]]
offset_left = -66.0
offset_top = -84.0
offset_right = 67.0
offset_bottom = -53.0
theme_override_fonts/font = ExtResource("6_6lk1x")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rbu0j")
placeholder_text = "Username"
alignment = 1
max_length = 10

[connection signal="button_down" from="menu_sprite/resume" to="menu_sprite" method="_on_resume_button_down"]
[connection signal="button_down" from="menu_sprite/respawn" to="menu_sprite" method="_on_respawn_button_down"]
[connection signal="button_down" from="menu_sprite/settings" to="menu_sprite" method="_on_settings_button_down"]
[connection signal="button_down" from="menu_sprite/quit_to_title" to="menu_sprite" method="_on_quit_to_title_button_down"]
[connection signal="button_down" from="menu_sprite/quit_game" to="menu_sprite" method="_on_quit_game_button_down"]
[connection signal="button_down" from="settings_sprite/sound" to="settings_sprite" method="_on_sound_button_down"]
[connection signal="button_down" from="settings_sprite/multiplayer" to="settings_sprite" method="_on_multiplayer_button_down"]
[connection signal="button_down" from="settings_sprite/skins" to="settings_sprite" method="_on_skins_button_down"]
[connection signal="button_down" from="settings_sprite/fullscreen" to="settings_sprite" method="_on_fullscreen_button_down"]
[connection signal="button_down" from="settings_sprite/done" to="settings_sprite" method="_on_done_button_down"]
[connection signal="button_down" from="multiplayer_menu/host" to="multiplayer_menu" method="_on_host_button_down"]
[connection signal="button_down" from="multiplayer_menu/join" to="multiplayer_menu" method="_on_join_button_down"]
[connection signal="pressed" from="multiplayer_menu/cancel" to="multiplayer_menu" method="_on_cancel_pressed"]
[connection signal="button_down" from="skin_swapper/apply" to="skin_swapper" method="_on_apply_pressed"]
[connection signal="button_down" from="skin_swapper/left" to="skin_swapper" method="change_skin" binds= [-1]]
[connection signal="button_down" from="skin_swapper/right" to="skin_swapper" method="change_skin" binds= [1]]
